--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     <div class="container introduction">
       <div class="row">
         <div class="col-lg-6 col-md-6">
-          <div class="top-textt">
+          <div class="top-text-one">
             <div class="d-flex flex-column">
               <span class="head-text">بیش از ۱۲ سال</span>
               <span class="head-text">انتخاب مطمئنِ کسب و کارهای آنلاین</span>
