--- a/index.html
+++ b/index.html
@@ -441,8 +441,9 @@
           <div class="row">
             <div class="col property-line">
               <div class="d-flex flex-row property">
+                <!-- support.svg -->
                 <img
-                  src="/assets/img/support.svg"
+                  src="../hataf/assets/img/support.svg"
                   alt=""
                   width="50px"
                   height="50px"
