--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
               <div class="d-flex flex-row property">
                 <!-- support.svg -->
                 <img
-                  src="../hataf/assets/img/support.svg"
+                  src="assets/img/support.svg"
                   alt=""
                   width="50px"
                   height="50px"
