--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <nav class="navbar container fixed-top navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"
-            ><img src="/assets/img/hataf-logo.png" alt=""
+            ><img src="assets/img/hataf-logo.png" alt=""
           /></a>
           <button
             class="navbar-toggler"
@@ -211,7 +211,7 @@
         </div>
         <div class="col-lg-6 col-md-6 deposit">
           <img
-            src="/assets/img/home.svg"
+            src="assets/img/home.svg"
             alt="Image description"
             class="img-fluid"
           />
@@ -223,7 +223,7 @@
       <div class="row">
         <div class="col-lg-6 col-md-6 deposit no-center">
           <img
-            src="/assets/img/payment.svg"
+            src="assets/img/payment.svg"
             alt="Image description"
             class="img-fluid"
           />
@@ -278,7 +278,7 @@
         </div>
         <div class="col-lg-6 col-md-6 deposit">
           <img
-            src="/assets/img/specifications.svg"
+            src="assets/img/specifications.svg"
             alt="Image description"
             class="img-fluid"
           />
@@ -290,7 +290,7 @@
       <div class="row">
         <div class="col-lg-6 col-md-6 deposit no-center">
           <img
-            src="/assets/img/hatafcard .svg"
+            src="assets/img/hatafcard .svg"
             alt="Image description"
             class="img-fluid"
           />
@@ -347,7 +347,7 @@
         </div>
         <div class="col-lg-6 col-md-6 deposit">
           <img
-            src="/assets/img/payout.svg"
+            src="assets/img/payout.svg"
             alt="Image description"
             class="img-fluid"
           />
@@ -359,7 +359,7 @@
       <div class="row">
         <div class="col-lg-6 col-md-6 deposit no-center">
           <img
-            src="/assets/img/hatafplus.svg"
+            src="assets/img/hatafplus.svg"
             alt="Image description"
             class="img-fluid"
           />
@@ -409,7 +409,7 @@
             <div class="col property-line">
               <div class="property d-flex flex-row">
                 <img
-                  src="/assets/img/verifiedIcon.svg"
+                  src="assets/img/verifiedIcon.svg"
                   alt=""
                   width="50px"
                   height="50px"
@@ -424,7 +424,7 @@
             <div class="col">
               <div class="d-flex flex-row property">
                 <img
-                  src="/assets/img/splite.svg"
+                  src="assets/img/splite.svg"
                   alt=""
                   width="50px"
                   height="50px"
@@ -441,7 +441,6 @@
           <div class="row">
             <div class="col property-line">
               <div class="d-flex flex-row property">
-                <!-- support.svg -->
                 <img
                   src="assets/img/support.svg"
                   alt=""
@@ -458,7 +457,7 @@
             <div class="col">
               <div class="d-flex flex-row property">
                 <img
-                  src="/assets/img/support.svg"
+                  src="assets/img/support.svg"
                   alt=""
                   width="50px"
                   height="50px"
@@ -628,35 +627,31 @@
           <div class="col-3">
             <form>
               <h5 class="foot-text">هاتف‌پال در شبکه‌های اجتماعی:</h5>
+              <img class="social-media" src="assets/img/instagram.svg" alt="" />
               <img
                 class="social-media"
-                src="/assets/img/instagram.svg"
-                alt=""
-              />
-              <img
-                class="social-media"
-                src="/assets/img/twitter.svg"
+                src="assets/img/twitter.svg"
                 width="40px"
                 height="40px"
                 alt=""
               />
               <img
                 class="social-media"
-                src="/assets/img/telegram.svg"
+                src="assets/img/telegram.svg"
                 width="40px"
                 height="40px"
                 alt=""
               />
               <img
                 class="social-media"
-                src="/assets/img/linkedin.svg"
+                src="assets/img/linkedin.svg"
                 width="40px"
                 height="40px"
                 alt=""
               />
               <img
                 class="social-media"
-                src="/assets/img/aparat.svg"
+                src="assets/img/aparat.svg"
                 width="40px"
                 height="40px"
                 alt=""
